--- a/nasa-api/mars-api.html
+++ b/nasa-api/mars-api.html
@@ -78,7 +78,7 @@
         <div class="col-3fr">
             <h5>Support</h5>
             <li>Rovers</li>
-            <ul>
+            <li>Orbits</li>
              <li>Query</li>
              <li></li>
              <li></li>
