--- a/bharatiya-food-court/index.html
+++ b/bharatiya-food-court/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <header>
-
+        <nav class="header-navbar">
+            
+        </nav>
     </header>
     <main>
 
     </main>
-    <body>
-        <h2></h2>
-    </body>
+    <footer>
+
+    </footer>
 </body>
 </html>
