--- a/bharatiya-food-court/index.html
+++ b/bharatiya-food-court/index.html
@@ -18,7 +18,11 @@
     </header>
     <main>
 <section>
+    <div>
+
+    </div>\
     <div></div>
+
     <div></div>
     <div></div>
     <div></div>
