--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="footer-social-icons">
                 <div class="icon"><a class="bi bi-telephone-fill" href="tel:+918517809277"></a></div>
                 <div class="icon"><a class="bi bi-linkedin"
-                        href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw==" target="_blank"></a>
+                        href="http://www.linkedin.com/in/rohit-patil-developer" target="_blank"></a>
                 </div>
                 <div class="icon"><a class="bi bi-envelope-fill" href="mailto:rohitpail15121998@gmail.com"></a></div>
                 <div class="icon"><a class="bi bi-github" href="https://rohit-patil15.github.io/ui-portfolio/"
