--- a/bharatiya-food-court/index.html
+++ b/bharatiya-food-court/index.html
@@ -10,7 +10,9 @@
         H1
     </header>
     <img>
-    <div></div>
+    <div>
+        <div></div>
+    </div>
     <div></div>
     <div></div>
     <div>
