--- a/bharatiya-food-court/index.html
+++ b/bharatiya-food-court/index.html
@@ -16,11 +16,13 @@
 <div></div>
 <div>
     <div></div>
+    <div></div>
 </div>
 <div></div>
 <section>
+    <div></div>
 <div></div>
-</section>
+</section><div></div>
    
     <footer>
 
