--- a/bharatiya-food-court/index.html
+++ b/bharatiya-food-court/index.html
@@ -10,7 +10,7 @@
     <div></div>
     <div></div>
     <div></div>
-
+<div></div>
     <div></div>
     <div></div>
 <div></div>
@@ -19,6 +19,7 @@
     <div></div> 
     <div></div>
 </div>
+<div></div>
 <div></div>
 <section>
     <div></div>
