--- a/bharatiya-food-court/index.html
+++ b/bharatiya-food-court/index.html
@@ -14,12 +14,14 @@
     <div></div>
     <div></div>
     <div></div>
+    <div></div>
 <div></div>
 <div>
     <div></div>
     <div></div> 
     <div></div>
 </div>
+<div></div>
 <div></div>
 <div></div>
 <section>
